@@ -1,3 +1,6 @@
+Mon Jul 14 15:06:19 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/data.c: improve for nvarchar
+
 Mon Jul 14 10:14:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
 	- minor SQLWCHAR improves
@@ -428,4 +431,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2554 2008-07-14 08:14:47 freddy77 Exp $
+$Id: ChangeLog,v 1.2555 2008-07-14 13:07:42 freddy77 Exp $
